--- a/LSPicSaver/Presentation/storyboard/Base.lproj/Main.storyboard
+++ b/LSPicSaver/Presentation/storyboard/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,8 +17,88 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QQ2-0r-FPR">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8fH-nk-vZ7" customClass="WaterfallLayout" customModule="LSPicSaver" customModuleProvider="target">
+                                    <size key="itemSize" width="61" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="mVe-Y0-RVg" customClass="PhotoCollectionViewCell" customModule="LSPicSaver" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="61" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZGR-Yz-0pm">
+                                            <rect key="frame" x="0.0" y="0.0" width="61" height="100"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xQz-nr-bAm">
+                                                    <rect key="frame" x="2" y="0.0" width="57" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="YGQ-uT-usT"/>
+                                                        <constraint firstAttribute="width" secondItem="xQz-nr-bAm" secondAttribute="height" multiplier="1:1" constant="8" id="zwN-uJ-dgo"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="8"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XGZ-6z-yHA">
+                                                    <rect key="frame" x="2" y="80" width="57" height="20"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M6S-Pa-aUr">
+                                                            <rect key="frame" x="13" y="3.0000000000000009" width="31" height="14.333333333333336"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.3041294642857143" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="6xA-gh-GlC"/>
+                                                        <constraint firstItem="M6S-Pa-aUr" firstAttribute="centerX" secondItem="XGZ-6z-yHA" secondAttribute="centerX" id="GQ3-xS-LCU"/>
+                                                        <constraint firstItem="M6S-Pa-aUr" firstAttribute="centerY" secondItem="XGZ-6z-yHA" secondAttribute="centerY" id="pFQ-0v-zmq"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="XGZ-6z-yHA" firstAttribute="leading" secondItem="xQz-nr-bAm" secondAttribute="leading" id="39z-qp-TEE"/>
+                                                <constraint firstItem="XGZ-6z-yHA" firstAttribute="bottom" secondItem="xQz-nr-bAm" secondAttribute="bottom" id="8aO-nk-Fjt"/>
+                                                <constraint firstItem="XGZ-6z-yHA" firstAttribute="trailing" secondItem="xQz-nr-bAm" secondAttribute="trailing" id="H2y-7Q-Toz"/>
+                                                <constraint firstItem="xQz-nr-bAm" firstAttribute="leading" secondItem="ZGR-Yz-0pm" secondAttribute="leading" constant="2" id="LbQ-VA-X11"/>
+                                                <constraint firstAttribute="trailing" secondItem="xQz-nr-bAm" secondAttribute="trailing" constant="2" id="Y5f-PW-AoC"/>
+                                                <constraint firstAttribute="bottom" secondItem="xQz-nr-bAm" secondAttribute="bottom" id="pfM-ib-enC"/>
+                                                <constraint firstAttribute="bottom" secondItem="xQz-nr-bAm" secondAttribute="bottom" id="sNx-ba-kVw"/>
+                                                <constraint firstItem="xQz-nr-bAm" firstAttribute="top" secondItem="ZGR-Yz-0pm" secondAttribute="top" id="vUp-CF-kds"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="8"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="sNx-ba-kVw"/>
+                                                </mask>
+                                            </variation>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="61" height="100"/>
+                                        <connections>
+                                            <outlet property="authorName" destination="M6S-Pa-aUr" id="w2D-9B-jEE"/>
+                                            <outlet property="imageView" destination="xQz-nr-bAm" id="02X-Dh-3ei"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="gJ5-MZ-mxg"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="q0g-ed-gSz"/>
+                                </connections>
+                            </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LPz-Zc-cMe">
-                                <rect key="frame" x="267" y="724" width="75" height="41"/>
+                                <rect key="frame" x="267" y="724.66666666666663" width="75" height="40.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
                                 <connections>
@@ -28,14 +109,27 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="QQ2-0r-FPR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="DNS-QD-Zt0"/>
+                            <constraint firstItem="QQ2-0r-FPR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DVD-bi-MeV"/>
+                            <constraint firstItem="LPz-Zc-cMe" firstAttribute="top" secondItem="QQ2-0r-FPR" secondAttribute="bottom" id="JXO-zg-Upm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LPz-Zc-cMe" secondAttribute="trailing" constant="51" id="QGW-Jn-xck"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LPz-Zc-cMe" secondAttribute="bottom" constant="53" id="e6Y-Gx-0UK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QQ2-0r-FPR" secondAttribute="trailing" id="r2c-7U-Y5p"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QQ2-0r-FPR" secondAttribute="bottom" id="s6j-hO-6Zj"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="JXO-zg-Upm"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="QQ2-0r-FPR" id="wGi-Ao-XuK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="113" y="-2"/>
+            <point key="canvasLocation" x="112.21374045801527" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
